tests/workflows/tests/snapshots/config__config_get_json_envelope_missing_key.snap
---
source: tests/workflows/tests/config.rs
expression: envelope
---
{
  "success": true,
  "action": "get",
  "key": "registry",
  "value": null,
  "found": false
}
