tests/workflows/tests/snapshots/config__config_get_json_envelope_single_key.snap
---
source: tests/workflows/tests/config.rs
expression: envelope
---
{
  "success": true,
  "action": "get",
  "key": "registry",
  "value": "https://registry.example.test",
  "found": true
}
