tests/workflows/tests/snapshots/config__config_list_json_envelope_two_keys.snap
---
source: tests/workflows/tests/config.rs
assertion_line: 133
expression: envelope
---
{
  "color": "always",
  "registry": "https://registry.example.test",
  "success": true
}
