tests/workflows/tests/snapshots/config__config_set_nested_sandbox_json_envelope.snap
---
source: tests/workflows/tests/config.rs
expression: envelope
---
{
  "success": true,
  "action": "set",
  "key": "sandbox",
  "value": {
    "mode": "strict"
  }
}
